# datastats-gcp-urls-scraper

./: .gitignore  Dockerfile  README.md  main.py  pyproject.toml
.github/: dependabot.yml
.github/workflows/: build_and_deploy.yml
src/utils/: config_loader.py  datastats_utils.py  gcp_utils.py  urls_scrapper.py  webpage_generator.py
utils/: config_loader.py  datastats.py  datastats_utils.py  gcp.py  gcp_utils.py  pg_utils.py  url_scrapper.py  urls_scrapper.py  webpage_generator.py
