[project]
name = "urls_scraper"
version = "0.2.0"
description = "Cloud Run to scrape jobs urls from a website."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "loguru",
    "selenium",
    "fake-useragent",
    "beautifulsoup4",
    "pandas",
    "python-dotenv",
    "google-cloud-storage",
    "pg8000",
    "google-cloud-logging"
]
